# 3D-Rendering_opengl

./: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  GameData.h  Model.cpp  Model.h  OBJLoader.h  main.cpp
OBJ-Files/: Castelia City.mtl  SnowTerrain.mtl
Shaders/: fragment_core.glsl  vertex_core.glsl
include/: Material.h  Mesh.h  Primitive.h  Shader.h  Texture.h  Vertex.h
src/: Material.cpp  Mesh.cpp  Primitive.cpp  Shader.cpp  Texture.cpp
